tests/harness/errors/062_str_contains_hint.eu
# Mistake: using str.contains? (Python/JavaScript style) — does not exist in eucalypt
text: "hello world"
check: text str.contains?("world")
